--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -3117,6 +3117,70 @@ public class 디오판토스_과제물 {
 
 <br><br>
 
+## 다이나믹 프로그래밍 심화(DP)
+
+**참고 : [DP 정리](https://bh946.github.io/algorithm/(%EA%B0%9C%EB%85%90)-Dynamic_Programming(%EB%8F%99%EC%A0%81%EA%B3%84%ED%9A%8D%EB%B2%95)/)**
+
+* **피보나치**
+  * `f[n] = fib[n-1] + fib[n-2]`
+* **이항계수**
+  * `B[i][j] = B[i-1][j-1] + B[i-1][j]`    
+    `B[i][i]=1, B[i][0]=1	,if(j==i || j==0)`
+* **격자경로**
+  * `P[i][j] = P[i-1,j] + P[i,j-1]`  
+    `P[1,j] = P[i,1] = 1`
+  * 심화 : 표시된 곳을 2회 지나야 하는 경우? 3차원으로 DP 선언  
+    EX : `(표시없는길 개수)/(표시1번 지난길 개수)/(표시2번 지난길 개수)` 
+* **거스름돈**
+  * `C[i][j] = min( C[i, j–D[i]] + 1, C[i-1, j] )	,if D[i]<=j`  
+    `C[i][j] = C[i-1][j]	,if D[i]>j`  
+    `C[i][j] = 0	,if j==0`
+  * 참고 : D는 Denom 으로써 액면가(화폐 단위 : 1원 10원 등등)을 의미
+* 연쇄 행렬곱셈(BOJ11049)
+  * **M\[i][j] = **<img src="/images/2023-01-11-(백준_필수3)알고리즘 템플릿 - java/image-20230609172128684.png" alt="image-20230609172128684" style="zoom: 80%;" />	,**if i<j**
+  * **M\[i][j] = 0	,if i==j**
+* LCS(BOJ6251)
+  * `C[i][j] = max( C[i-1][j], C[i][j-1] )	,if A[i]!=B[j]`  
+    `C[i][j] = C[i-1][j-1] + 1	,if A[i]==B[j]`  
+    `C[i][j] = 0	,if i==0 || j==0`
+  * **Find a Longest Common Subsequence** 제일 긴 공통된 부분 문자열을 의미하며,   
+    A문자열과 B문자열이 주어졌을때 이들의 LCS를 구한다는 의미이다.
+* **OBST(Optimal Binary Search Tree)**
+  * <img src="/images/2023-01-11-(백준_필수3)알고리즘 템플릿 - java/DRW00000bc84efc.gif" alt="img"  /> 
+  * ''키''의 검색 빈도수(즉, 확률)를 받아서 BST의 최적인 트리를 구하는 것
+    * WHY? 빈도수 높은 키값이 루트와 가까울수록 더욱 효율적이기 때문에 사용!
+    * 다만, 이와 해당된 문제를 풀어본적이 없어서 **그냥 개념만 이해하고 넘어간다.**
+* 0-1 Knapsack(BOJ12865)
+  * `max( P[i-1][w], pi + P[i-1][w-wi] )	,if wi<=w`  
+    `P[i][w] = P[i-1][w]	,if wi>w`
+* 프리랜서의 일정 정하기(SWEA4052)
+  * `OPT[j] = max ( OPT[j-1], w[j] + OPT[p(j)] )`
+    * OPT[j-1] : 일정 j 선택X
+    * OPT[p(j)]+w(j) : OPT[p(j)]는 p(j)<j인 일정들 중 젤 큰 index의 최적해(OPT) 값
+      * p(j) : 일정 j와 겹치지 않고, j와 가장가까운(큰) 일정을 의미
+      * w(j) : 일정 j의 비용
+    * BOJ는 없고 **SWEA** 에 **4052** 문제로 존재
+      * 참고로 문제에 그림 조금 잘못 그려져 있음.
+
+* 완전정보 게임
+  * Nim 게임을 의미 - [바둑돌 가져가기](), [coin move game](https://bh946.github.io/algorithmtest/(%EC%88%98%EC%97%85)Coin-Move-Game/), [coin game](https://bh946.github.io/algorithmtest/(%EC%88%98%EC%97%85)Coin-Game/), [card game](https://bh946.github.io/algorithmtest/(%EC%88%98%EC%97%85)Card-Game/)
+  * 코드 작성은 쉽고, 이기는 규칙을 찾는게 어렵기 때문에 규칙찾는것만 연습!!
+  * 집가서 coin move game 디버깅 통해서 dp값 제대로 나왔나 확인좀 해보자.
+  * 그리고 바둑돌 가져가기 손으로 푼거좀 정리해두자.
+  * => **coin move game** 이번기회에 확실히 다시 정리 및 **코드도** 짜자 이건 ㅎㅎ
+* 제한된 비트 스트링의 개수
+  * `S[k] = S[k-1] + S[k-2]`
+  * 이건 너무 쉬운 풀이인데, 비트 스트링 개수 세는 아이디어는 기록하면 좋을듯 해서
+  * 따로 게시물 정리하겠음.(코드는 없이)
+* 최대 공백 정사각형(SWEA4062)
+  * `LES[x][y] = min( LES[x-1][y-1], LES[x][y-1], LES[x-1][y] ) + 1`  
+    `LES[x][y] = 1	if 첫번째 행or열이 비었을때`  
+    `LES[x][y] = 0	if 비어있지 않다면`
+  * LES\[x][y] 는 공백 정사각형 크기이며, [x,y]는 해당 정사각형의 우측하단 좌표를 의미
+  * 문제 풀거임 이건. **코드**. 
+
+<br><br>
+
 # 참고
 
 **`set, unordered_set, priority_queue` 의 경우에 무슨 자료구조를 언제 사용할까를 정해두려고 한다.**
