--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-20-(백준_바킹독)1~11강 필수 문제모음.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-20-(백준_바킹독)1~11강 필수 문제모음.md
@@ -91,6 +91,6 @@ typora-root-url: ../../..
     * 안푸렁.. DP도써야해..
   * [로프](https://www.acmicpc.net/problem/2217)
   * [보물](https://www.acmicpc.net/problem/1026)
-  * **잘못된 그리디(그리디 문제 아닌것)** => 여기부터
+  * **잘못된 그리디(그리디 문제 아닌것)**
     * [평범한 배낭](https://www.acmicpc.net/problem/12865)
     * [휴게소 세우기](https://www.acmicpc.net/problem/1477)
