--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -3164,7 +3164,7 @@ public class 디오판토스_과제물 {
 
 * 완전정보 게임
   * Nim 게임을 의미 - [바둑돌 가져가기](), [coin move game](https://bh946.github.io/algorithmtest/(%EC%88%98%EC%97%85)Coin-Move-Game/), [coin game](https://bh946.github.io/algorithmtest/(%EC%88%98%EC%97%85)Coin-Game/), [card game](https://bh946.github.io/algorithmtest/(%EC%88%98%EC%97%85)Card-Game/)
-  * 코드 작성은 쉽고, 이기는 규칙을 찾는게 어렵기 때문에 규칙찾는것만 연습!!
+  * "바둑돌 가져가기, coin move game" 는 확실히 이해하는것을 권장
   * 집가서 coin move game 디버깅 통해서 dp값 제대로 나왔나 확인좀 해보자.
   * 그리고 바둑돌 가져가기 손으로 푼거좀 정리해두자.
   * => **coin move game** 이번기회에 확실히 다시 정리 및 **코드도** 짜자 이건 ㅎㅎ
