--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -3136,10 +3136,10 @@ public class 디오판토스_과제물 {
     `C[i][j] = C[i-1][j]	,if D[i]>j`  
     `C[i][j] = 0	,if j==0`
   * 참고 : D는 Denom 으로써 액면가(화폐 단위 : 1원 10원 등등)을 의미
-* 연쇄 행렬곱셈(BOJ11049)
+* **연쇄 행렬곱셈(BOJ11049)**
   * **M\[i][j] = **<img src="/images/2023-01-11-(백준_필수3)알고리즘 템플릿 - java/image-20230609172128684.png" alt="image-20230609172128684" style="zoom: 80%;" />	,**if i<j**
   * **M\[i][j] = 0	,if i==j**
-* LCS(BOJ6251)
+* **LCS(BOJ6251)**
   * `C[i][j] = max( C[i-1][j], C[i][j-1] )	,if A[i]!=B[j]`  
     `C[i][j] = C[i-1][j-1] + 1	,if A[i]==B[j]`  
     `C[i][j] = 0	,if i==0 || j==0`
@@ -3150,10 +3150,10 @@ public class 디오판토스_과제물 {
   * ''키''의 검색 빈도수(즉, 확률)를 받아서 BST의 최적인 트리를 구하는 것
     * WHY? 빈도수 높은 키값이 루트와 가까울수록 더욱 효율적이기 때문에 사용!
     * 다만, 이와 해당된 문제를 풀어본적이 없어서 **그냥 개념만 이해하고 넘어간다.**
-* 0-1 Knapsack(BOJ12865)
+* **0-1 Knapsack(BOJ12865)**
   * `max( P[i-1][w], pi + P[i-1][w-wi] )	,if wi<=w`  
     `P[i][w] = P[i-1][w]	,if wi>w`
-* 프리랜서의 일정 정하기(SWEA4052)
+* **프리랜서의 일정 정하기(SWEA4052)**
   * `OPT[j] = max ( OPT[j-1], w[j] + OPT[p(j)] )`
     * OPT[j-1] : 일정 j 선택X
     * OPT[p(j)]+w(j) : OPT[p(j)]는 p(j)<j인 일정들 중 젤 큰 index의 최적해(OPT) 값
@@ -3162,12 +3162,9 @@ public class 디오판토스_과제물 {
     * BOJ는 없고 **SWEA** 에 **4052** 문제로 존재
       * 참고로 문제에 그림 조금 잘못 그려져 있음.
 
-* 완전정보 게임
-  * Nim 게임을 의미 - [바둑돌 가져가기](), [coin move game](https://bh946.github.io/algorithmtest/(%EC%88%98%EC%97%85)Coin-Move-Game/), [coin game](https://bh946.github.io/algorithmtest/(%EC%88%98%EC%97%85)Coin-Game/), [card game](https://bh946.github.io/algorithmtest/(%EC%88%98%EC%97%85)Card-Game/)
+* **완전정보 게임(coin move game)**
+  * Nim 게임을 의미 - [바둑돌 가져가기](https://bh946.github.io/algorithm/(%EA%B0%9C%EB%85%90)-NIM_GAME(%ED%95%84%EC%8A%B9%EA%B2%8C%EC%9E%84)/), [coin move game](https://bh946.github.io/algorithmtest/(%EC%88%98%EC%97%85)Coin-Move-Game/), [coin game](https://bh946.github.io/algorithmtest/(%EC%88%98%EC%97%85)Coin-Game/), [card game](https://bh946.github.io/algorithmtest/(%EC%88%98%EC%97%85)Card-Game/)
   * "바둑돌 가져가기, coin move game" 는 확실히 이해하는것을 권장
-  * 집가서 coin move game 디버깅 통해서 dp값 제대로 나왔나 확인좀 해보자.
-  * 그리고 바둑돌 가져가기 손으로 푼거좀 정리해두자.
-  * => **coin move game** 이번기회에 확실히 다시 정리 및 **코드도** 짜자 이건 ㅎㅎ
 * 제한된 비트 스트링의 개수
   * `S[k] = S[k-1] + S[k-2]`
   * 이건 너무 쉬운 풀이인데, 비트 스트링 개수 세는 아이디어는 기록하면 좋을듯 해서
