--- a/_posts/Coding_Test/Baekjoon_Test/2023-01-28-(백준)코테 준비 시작(Intro).md
+++ b/_posts/Coding_Test/Baekjoon_Test/2023-01-28-(백준)코테 준비 시작(Intro).md
@@ -88,6 +88,8 @@ typora-root-url: ../../..
 
 **참고로 `SQL, 기업 코테 문제` 관련 문제들은 '프로그래머스' 에서 풀자!**
 
+**추가로 "바킹독"님 블로그에 알고리즘을 정말 잘 알려주셔서 많은 도움이 되었다.**
+
 <br><br>
 
 ## 참고 URL
