--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -3165,16 +3165,15 @@ public class 디오판토스_과제물 {
 * **완전정보 게임(coin move game)**
   * Nim 게임을 의미 - [바둑돌 가져가기](https://bh946.github.io/algorithm/(%EA%B0%9C%EB%85%90)-NIM_GAME(%ED%95%84%EC%8A%B9%EA%B2%8C%EC%9E%84)/), [coin move game](https://bh946.github.io/algorithmtest/(%EC%88%98%EC%97%85)Coin-Move-Game/), [coin game](https://bh946.github.io/algorithmtest/(%EC%88%98%EC%97%85)Coin-Game/), [card game](https://bh946.github.io/algorithmtest/(%EC%88%98%EC%97%85)Card-Game/)
   * "바둑돌 가져가기, coin move game" 는 확실히 이해하는것을 권장
-* 제한된 비트 스트링의 개수
+* **제한된 비트 스트링의 개수**
   * `S[k] = S[k-1] + S[k-2]`
   * 이건 너무 쉬운 풀이인데, 비트 스트링 개수 세는 아이디어는 기록하면 좋을듯 해서
-  * 따로 게시물 정리하겠음.(코드는 없이)
-* 최대 공백 정사각형(SWEA4062)
+  * **참고 : [제한된 비트 스트링의 개수](https://bh946.github.io/algorithm/(%EA%B0%9C%EB%85%90)-Dynamic_Programming(%EB%8F%99%EC%A0%81%EA%B3%84%ED%9A%8D%EB%B2%95)/#%EC%A0%9C%ED%95%9C%EB%90%9C-%EB%B9%84%ED%8A%B8-%EC%8A%A4%ED%8A%B8%EB%A7%81%EC%9D%98-%EA%B0%9C%EC%88%98)**
+* **최대 공백 정사각형(SWEA4062)**
   * `LES[x][y] = min( LES[x-1][y-1], LES[x][y-1], LES[x-1][y] ) + 1`  
     `LES[x][y] = 1	if 첫번째 행or열이 비었을때`  
     `LES[x][y] = 0	if 비어있지 않다면`
   * LES\[x][y] 는 공백 정사각형 크기이며, [x,y]는 해당 정사각형의 우측하단 좌표를 의미
-  * 문제 풀거임 이건. **코드**. 
 
 <br><br>
 
