docs : 네트워크 플로우 그림 추가

--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -2600,12 +2600,20 @@ static class Rectangle {
 **아래 코드에서는 `Dinic's 와 멀티 Source, Sink의 경우` 예를 소개한다.**
 
 * **Ford-Fulkerson**과 **Edmonds-Karp**는 DFS, BFS만 다르며 나머지는 로직이 정확히 동일
+
 * **Dinic's** 는 **BFS로 레벨트리 구하고, DFS(재귀)로 연산을 진행**
+
 * **중요한 점**
   * **"이분 매칭" 문제를 "Max-Flow" 문제로 치환해서 풀 수 있다.**
+  
   * **"Min-Cut" 문제는 그냥 "Max-Flow" 로 풀었을 때 답과 동일하다.**
+  
   * **보통 문제를 푸는 방식은 문제에 적합하게 "그래프" 를 설계한 후 풀어나간다.**
-    * **"그래프" 그리는 TIP**
+    
+    * **"그래프" 그리는 TIP (아래 그림은 Jerry And Tom예시)**
+    
+      ![image-20230618164132047](/images/2023-01-11-(백준_필수3)알고리즘 템플릿 - java/image-20230618164132047.png) 
+    
       * 그래프에는 **에지**를 그릴텐데 반드시 유량이 아닌 **용량**을 적어줄 것
         * 햇갈리면 안되는게 **유량은 나중에** 계산할 때 값 생기기 시작
       * **멀티 Source, Sink**의 경우?? 외부에 **S, T 노드를 임의로 추가**해서 사용
@@ -2614,6 +2622,7 @@ static class Rectangle {
       * 복잡한 문제들은 **에지를 안주고** 직접 에지를 **구해야** 할때도 존재
         * **예시 문제 : [Jerry and Tom](https://www.acmicpc.net/problem/14750)**
         * 참고 : 해당 예시에서는 에지를 직접 구해야하며, 해당 에지는 "선분교차" 여부에 따라 구해진다.
+  
 * **참고 용어**
   * Residual network graph : 잉여(=잔여) 그래프
   * Level graph : 레벨 그래프(=트리의 각 노드들 깊이 표현)
