docs : 내용수정(위상정렬)

--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -1664,6 +1664,8 @@ public static void main(String[] args) throws IOException {
 
 **위상 정렬(Topological Sort) : 방향 그래프에서 간선으로 주어진 정점 간 선후관계를 위배하지 않도록 나열하는 정렬**
 
+**BFS(큐)로도 풀이가 가능하고 DFS로도 풀이가 가능한데 둘다 보여주겠다.**
+
 * 단순히 부모 자식관계를 위배하지만 않으면 되므로 생각보다 간단한 정렬이다.
 * indegree가 0인게 제일 부모이며 최외각에 존재하는건 자명하다.
 
