--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -3172,7 +3172,6 @@ public class 디오판토스_과제물 {
       * w(j) : 일정 j의 비용
     * BOJ는 없고 **SWEA** 에 **4052** 문제로 존재
       * 참고로 문제에 그림 조금 잘못 그려져 있음.
-
 * **완전정보 게임(coin move game)**
   * Nim 게임을 의미 - [바둑돌 가져가기](https://bh946.github.io/algorithm/(%EA%B0%9C%EB%85%90)-NIM_GAME(%ED%95%84%EC%8A%B9%EA%B2%8C%EC%9E%84)/), [coin move game](https://bh946.github.io/algorithmtest/(%EC%88%98%EC%97%85)Coin-Move-Game/), [coin game](https://bh946.github.io/algorithmtest/(%EC%88%98%EC%97%85)Coin-Game/), [card game](https://bh946.github.io/algorithmtest/(%EC%88%98%EC%97%85)Card-Game/)
   * "바둑돌 가져가기, coin move game" 는 확실히 이해하는것을 권장
@@ -3185,6 +3184,10 @@ public class 디오판토스_과제물 {
     `LES[x][y] = 1	if 첫번째 행or열이 비었을때`  
     `LES[x][y] = 0	if 비어있지 않다면`
   * LES\[x][y] 는 공백 정사각형 크기이며, [x,y]는 해당 정사각형의 우측하단 좌표를 의미
+* **위상정렬 + DP(BOJ2056)**
+  * 위상정렬과 DP는 밀접한 관계가 있는데, 해당 문제를 풀어서 느껴볼 것
+  * 참고 : [위상정렬과 DP관계]()
+
 
 <br><br>
 
