--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -3186,7 +3186,7 @@ public class 디오판토스_과제물 {
   * LES\[x][y] 는 공백 정사각형 크기이며, [x,y]는 해당 정사각형의 우측하단 좌표를 의미
 * **위상정렬 + DP(BOJ2056)**
   * 위상정렬과 DP는 밀접한 관계가 있는데, 해당 문제를 풀어서 느껴볼 것
-  * 참고 : [위상정렬과 DP관계]()
+  * **참고 : [위상정렬과 DP관계](https://bh946.github.io/algorithm/(%EA%B0%9C%EB%85%90)-Dynamic_Programming(%EB%8F%99%EC%A0%81%EA%B3%84%ED%9A%8D%EB%B2%95)/#%EC%9C%84%EC%83%81%EC%A0%95%EB%A0%AC--dp)**
 
 
 <br><br>
