--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -319,6 +319,11 @@ Arrays.copyOfRange(원본배열, 시작, 끝); // 배열의 경우
 * **BFS를 우선**으로 사용하며, DFS는 DFS로만 풀리는 문제에 사용하면 된다.
 * **BFS는 큐** 를 활용하고, **DFS는 스택 또는 재귀(필자는 주로 재귀)**를 활용한다.
 * **주의할점은 BFS는 방문기록을 큐에 집어넣는 시점에 남겨야 한다.**
+* **또한, "거리가 일정" 할때는 "BFS" 로 "최단거리" 를 구할 수 있는데 이때 DP의 개념이 포함된다.**
+  * BFS 특성상 "큐" 를 통해서 레벨(높이)순으로 접근하기 때문에 최적의 거리(dist 배열)를 항상 기록하므로 DP처럼 최적의 값으로 배열을 채워나간다는 점이 동일하다.
+  * DP배열이 1차원, 2차원인지 연습하기 좋은 문제를 소개한다.
+    * [숨바꼭질4_BOJ13913](https://www.acmicpc.net/problem/13913), [이모티콘_BOJ14226](https://www.acmicpc.net/problem/14226)
+
 
 <br>
 
