--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -1550,7 +1550,19 @@ static void bfs(int root) {
 
 <br>
 
-### 2. 이진 트리의 순회
+### 2. 트리의 지름
+
+**트리의 지름이란, 트리에서 임의의 두 점 사이의 거리 중 가장 긴 것을 말한다.**
+
+**이를 구하는 로직은 생각보다 간단하다.**
+
+* 시작할 임의의 노드에서 DFS 1번을 통해 가장 긴 정점을 구한다.
+* 해당 구한 정점에서 DFS 1번을 통해 또 가장 긴 정점을 구한다.
+* 총 DFS 2번을 통해서 2개의 정점을 구했고 이 두정점의 거리가 트리의 지름이 된다.
+
+<br>
+
+### 3. 이진 트리의 순회
 
 * **레벨 순회(=bfs(root))** : 높이 순서대로 방문한다.
   * 기존이랑 **동일**. root를 시작점으로 **bfs** 돌리면 높이 순서대로 위에서부터 차례로 순회한다.
@@ -1562,7 +1574,7 @@ static void bfs(int root) {
 
 <br>
 
-### 3. Segment Tree(구간합)
+### 4. Segment Tree(구간합)
 
 **여러개의 데이터가 연속으로 있을때 `배열` 에서는 그 구간의 합을 구할때 복잡도가 N이 걸리는데, 이걸 `세그먼트 트리` 를 이용해서 logN으로 개선시키려는 목적**
 
