--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -712,6 +712,38 @@ public static void func(int depth, int sum) {
 }
 ```
 
+<br>
+
+**트리의 지름 - 응용(사고력 확장)**
+
+```java
+// 생각해보면, DFS에서 반드시 탈출하는 base condition 을 꼭 depth로 구현할 필요는 없다.
+// 즉, visited를 통해 방문 체크할 경우 당연히 모두 방문하게 되면 재귀 종료는 자명하기 때문이다.
+// 아래 예시는 임의로 입력들어온 노드를 DFS를 통해서 제일 거리가 먼 노드를 구하는 코드이다.
+static void dfs(int val, int node) {
+    // base condition -> visited
+    if(maxVal < val) {
+        maxVal = val; // 가중치 합 => 최대 거리
+        maxNode = node; // 이때의 해당 노드
+    }
+    // recursion
+    for(Node nxt : inArr[node]) {
+        if(visited[nxt.nxt]) continue;
+        visited[nxt.nxt] = true;
+        dfs(val+nxt.w, nxt.nxt);
+        visited[nxt.nxt] = false; // backtracking
+    }
+}
+// 아래는 main 함수 내에서 dfs 호출
+visited[1] = true;
+dfs(0, 1); // 임의의 노드 1
+visited[1] = false; // backtracking
+
+visited[maxNode] = true;
+dfs(0, maxNode); // 임의의 노드 maxNode
+visited[maxNode] = false; // backtracking
+```
+
 <br><br>
 
 ## Branch-and-Bound(분기한정법)
