--- a/_posts/Coding_Test/Baekjoon_Concept/2023-02-10-(백준_강의2)알고리즘 기초2 - 문제 모음.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-02-10-(백준_강의2)알고리즘 기초2 - 문제 모음.md
@@ -144,14 +144,15 @@ typora-root-url: ../../..
 
 - [트리 순회](https://bh946.github.io/baekjoontest/(java)%ED%8A%B8%EB%A6%AC-%EC%88%9C%ED%9A%8C-%EB%B0%B1%EC%A4%801991/)
   - 복습하기
-- [트리의 높이와 너비](https://www.acmicpc.net/problem/2250)
+- [트리의 높이와 너비](https://bh946.github.io/baekjoontest/(java)%ED%8A%B8%EB%A6%AC%EC%9D%98-%EB%86%92%EC%9D%B4%EC%99%80-%EB%84%88%EB%B9%84-%EB%B0%B1%EC%A4%802250/)
   - 복습하기
 - [트리의 부모 찾기](https://bh946.github.io/baekjoontest/(java)%ED%8A%B8%EB%A6%AC%EC%9D%98-%EB%B6%80%EB%AA%A8-%EC%B0%BE%EA%B8%B0-%EB%B0%B1%EC%A4%8011725/)
-- [트리의 지름](https://www.acmicpc.net/problem/1167)
+- [트리의 지름](https://bh946.github.io/baekjoontest/(java)%ED%8A%B8%EB%A6%AC%EC%9D%98-%EC%A7%80%EB%A6%84-%EB%B0%B1%EC%A4%801167/)
   - 복습하기
-- [트리의 지름](https://www.acmicpc.net/problem/1967)
+- [트리의 지름](https://bh946.github.io/baekjoontest/(java)%ED%8A%B8%EB%A6%AC%EC%9D%98-%EC%A7%80%EB%A6%84-%EB%B0%B1%EC%A4%801967/)
 
 <br><br>
 
 ## Outro..
 
+**재귀가 정말 쉽지 않다고 생각한다. 이 문제들에서는 DFS(재귀-백트래킹) 관련 여러가지 응용 로직을 터득하는걸 목표로 하자.**
