docs : 날짜 계산 추가

--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -99,6 +99,35 @@ System.out.println(Math.round(pi*1000)/1000.0); // 3.142
 */
 ```
 
+<br>
+
+**날짜 계산 - Date.getTime() 활용**
+
+* 날짜 관련해서 다양한 클래스들이 존재하는데, 날짜 차이를 계산하는 하나의 예시를 기록해두겠다.
+* 계산 과정에서 `double` 타입으로 해줘야 오차가 거희 없다.
+* `format` 을 활용해서 원하는 형식으로 자유롭게 커스텀 가능하다.
+* `date` 를 활용해서 `.getTime` 을 통해 날짜 계산도 오차 없이 가능하다.
+
+```java
+// EX : BOJ 25318
+// 2019/07/03 03:43:21 이런식으로 입력들어왔다고 가정
+stk = new StringTokenizer(br.readLine(), " "); // ["2019/07/03", "03:43:21"]
+String a = stk.nextToken(); // "2019/07/03"
+String b = stk.nextToken(); // "03:43:21"
+DateFormat format = new SimpleDateFormat("yyyy/MM/ddh:m:s"); // "2019/07/0303:43:21"
+Date date = format.parse(a+b); // Thu Oct 14 10:12:31 KST 2021
+inArr[i] = date; // inArr 배열에 전부 기록
+// ... 생략
+
+// inArr[N] 번째 날짜와 inArr[i] 번째 날짜의 차이 계산 과정
+double Sec = (inArr[N].getTime() - inArr[i].getTime()) / 1000; // ms -> s
+double days = Sec/(24*60*60); // s -> d : 이 값이 두 날짜의 차이 "일" 수이다.
+double p = Math.max(Math.pow(0.5, days/365), Math.pow(0.9, N-i)); // 이건 그냥 문제의 공식
+sum1 += p*lArr[i];
+sum2 += p;
+long result = Math.round((sum1/sum2)*10/10.0); // 소수점 첫번째 자리에서 반올림 -> 정수형
+```
+
 <br><br>
 
 ## 입출력 - I/O
