--- a/_posts/Major/Algorithm_Concept/2022-12-28-(개념) Sort(정렬).md
+++ b/_posts/Major/Algorithm_Concept/2022-12-28-(개념) Sort(정렬).md
@@ -43,7 +43,7 @@ typora-root-url: ../../..
 
 ![image-20221228003613812](C:\Users\KoBongHun\Desktop\Git\BH946.github.io\images\2022-12-28-(개념) Sort(정렬)\image-20221228003613812.png)
 
-* 순서 : 삽입(좌측상단), 버블(우측상단), 선택(좌측하단), 교환(우측하단)
+* **순서 : 삽입(좌측상단), 버블(우측상단), 선택(좌측하단), 교환(우측하단)**
   * **삽입정렬** : 앞에서부터 하나씩 삽입하면서 삽입된것들 비교해가며 자기 자리를 찾아가는 구조  
     즉, 삽입했을때 바로앞과 비교하고 비교한거의 앞에것들도 다 비교해야한다는 것
   * **버블정렬** : 2개씩 비교하면서 작은걸 앞으로 옮기면서 한바퀴 지나면 제일 큰게 제일 뒤로 감  
