git 게시물 정리

--- a/_posts/Git&Github/CLI_명령어/2022-07-31-GIT 기초 명령어.md
+++ b/_posts/Git&Github/CLI_명령어/2022-07-31-GIT 기초 명령어.md
@@ -35,12 +35,15 @@ typora-root-url: ../../..
 ### Git 내용 배포할때
 
 * **git status로 상태 확인** - 추가한 파일, 수정된 파일 등등 변경사항을 먼저 체크하는 것
-
-* **git log로 push 확인** - 기록 확인하는 용도. `q` 로 탈출
+* **git log로 푸시(커밋) 확인** - 기록 확인하는 용도. `q` 로 탈출
 * **git init** - `.git` 폴더 생성
 * **git add .** - 한번에 전체 코드 추가(git add 파일/폴더명 입력시 해당 파일/폴더만 깃 추가)
 * **git commit -m "revise"** - 원하는 코멘트 달면 되고, 커밋을 의미
-* **git push -u origin main** - 로컬에서 origin 프로젝트 이름의 main브랜치를 push함(깃의 브랜치 main과 매핑)
+* **git push -u origin main** - GIT의 main브랜치와 로컬의 main브랜치를 -u(매칭)후 push
+* **git push origin main** - 그런데 아마도 요즘은 -u안써도 바로 적용되는듯 하다.
+  * **-u** : upstream(GIT저장소와 매칭) 연결 안되어있을때 사용
+  * **origin** : GIT저장소 별칭(GIT저장소임을 알기 쉽게 표시)
+
 
 <br><br>
 
@@ -51,37 +54,50 @@ typora-root-url: ../../..
 만약 `git clone`을 이미 한 상태라면, git은 연결되어있는 상태여서 `remote` 안해도 된다. `pull`도 필요없다.  
 따라서 이 경우에는 `remote, pull 단계`는 바로 넘어가도 된다.
 
-* **git remote add origin https://github.com/BH946/fullstack-clone.git** - 로컬과 git과의 연결 예시
+**왜?? clone을 통해서 해당 브랜치도 로컬에 생성되었으며, remote 연결도 GIT 저장소와 잘 연동된 상태이기 때문에 바로 사용이 가능**
+
+* **remote 단계**
+  * **git remote add origin https://github.com/BH946/fullstack-clone.git** - 로컬과 git과의 연결 예시
+
 
 <br>
 
 만약 `git 홈페이지에` 이미 존재하는 브랜치에 `push할 생각`이 아니라면 `pull 생략` 가능.
 
-* **git pull origin shop-cart-ui** - `pull`을 먼저 해줘야 `연결 및 데이터도 문제 없게 올릴 수 있어`서 하는 작업.
-* **git branch -a** - `로컬 브랜치` 확인
-  **git branch -r** - `git 브랜치` 확인
-* **git checkout 브랜치명** - 원하는 브랜치명으로 변경
-  **git checkout -b 브랜치명** - 원하는 브랜치명으로 변경해주면서 브랜치 없으면 새로 생성까지
+**왜 이미 존재하는 브랜치에는 pull을 하나??   
+pull을 먼저 하는 이유는 GIT저장소와 로컬의 데이터의 conflict(충돌)을 사전 제거하고 개발하려는 목적  
+애초에 이미 브랜치가 존재할 경우 pull을 해서 해당 코드를 수정하는게 올바른 순서**
+
+* **pull 단계**
+  * **git pull origin shop-cart-ui** - `pull`을 먼저 해줘야 `연결 및 데이터도 문제 없게 올릴 수 있어`서 하는 작업.
+  * **git branch -a** - `로컬 브랜치` 확인
+    **git branch -r** - `git 브랜치` 확인  
+    **git branch -d 브랜치명** - `로컬 브랜치` 삭제
+  * **git checkout 브랜치명** - 원하는 브랜치명으로 변경
+    **git checkout -b 브랜치명** - 원하는 브랜치명으로 변경해주면서 브랜치 없으면 새로 생성까지
+
 
 <br>
 
-만약 `새로운 브랜치`를 만드는 것이면 그대로 `위과정 진행`하면 되고,   
+만약 `새로운 브랜치`를 만드는 것이면 그대로 `아래 과정 진행`하면 되고,   
 `기존 git의 브랜치`에 적용하려는 것이면 반드시 기존 브랜치와 `동일한 이름으로 checkout`을 해줄것.
 
 * **git add .**
 * **git commit -m "revise"**
 * **git push -u origin shop-cart-ui** - 현재 위과정에서 변경한 `로컬 브랜치`로 브랜치명을 기입!!
 
-`로컬 브랜치명`과 동일한 git의 브랜치가 없으면,  새로 git에 브랜치를 생성하기 때문에   
-새로운 브랜치를 만들수 있는 것이다.
-
 <br>
 
-깃 홈페이지에서 브랜치들과 로컬에서 브랜치들 서로 상호관계를 가지며 관리하는 것이다.
+**`로컬 브랜치명`과 동일한 git의 브랜치가 없으면,  새로 git에 브랜치를 생성하기 때문에   
+새로운 브랜치를 만들수 있는 것이다.**
+
+깃 홈페이지에서 브랜치들과 로컬에서 브랜치들 `서로 상호관계`를 가지며 관리하는 것이다.
 
 <br>
 
 ### Git branch 가져올때
+
+**이미 위에서 배포 부분에서 설명한 내용(배포를 위해 연결(remote)을 해야해서 미리 언급했음)**
 
 #### pull 방법
 
