--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -986,10 +986,16 @@ System.out.println(d[N]);
 ```java
 // √N 이하까지만 확인해도 소수 판별이 가능하므로 복잡도 N -> √N 개선
 public static boolean isPrime(int n) {
-    if(n == 1) return false;
+	if(n == 1) return false; // 주석가능
     for(int i = 2; i*i<=n; i++) { // √N 이하까지 돈다.
         if(n%i == 0) return false;
     }
+    return true;
+}
+// 또는 아래로 암기
+public static boolean isPrime(int n) {
+    for(int i = 2; i<=(int)Math.sqrt(n); i++) // √N 이하
+        if(n%i == 0) return false;
     return true;
 }
 ```
