--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-01-(백준_필수1)알고리즘 문제풀기 전 필독!!.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-01-(백준_필수1)알고리즘 문제풀기 전 필독!!.md
@@ -24,6 +24,8 @@ typora-root-url: ../../..
 
 **시간복잡도**
 
+* 컴퓨터가 대략 1억 번의 계산이 1초 내에 가능하다고 기억(실제론 좀 더 계산)
+
 ![image-20230428154114290](/images/2023-01-01-(백준_필수1)알고리즘 문제풀기 전 필독!!/image-20230428154114290.png)
 
 <br>
