--- a/_posts/Coding_Test/Baekjoon_Concept/2023-02-01-(백준_강의1)알고리즘 기초1 - 문제 모음.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-02-01-(백준_강의1)알고리즘 기초1 - 문제 모음.md
@@ -118,14 +118,14 @@ typora-root-url: ../../..
   - 복습하기
 
 - [이친수](https://bh946.github.io/baekjoontest/(C++)%EC%9D%B4%EC%B9%9C%EC%88%98-%EB%B0%B1%EC%A4%802193/)
-- [가장 긴 증가하는 부분 수열](https://bh946.github.io/baekjoontest/(C++)%EA%B0%80%EC%9E%A5-%EA%B8%B4-%EC%A6%9D%EA%B0%80%ED%95%98%EB%8A%94-%EB%B6%80%EB%B6%84-%EC%88%98%EC%97%B4-%EB%B0%B1%EC%A4%8011053/)
+- [가장 긴 증가하는 부분 수열](https://bh946.github.io/baekjoontest/(C++)%EA%B0%80%EC%9E%A5-%EA%B8%B4-%EC%A6%9D%EA%B0%80%ED%95%98%EB%8A%94-%EB%B6%80%EB%B6%84-%EC%88%98%EC%97%B4-%EB%B0%B1%EC%A4%8011053/) 
   - 복습하기
 
 - [가장 긴 증가하는 부분 수열 4](https://bh946.github.io/baekjoontest/(C++)%EA%B0%80%EC%9E%A5-%EA%B8%B4-%EC%A6%9D%EA%B0%80%ED%95%98%EB%8A%94-%EB%B6%80%EB%B6%84-%EC%88%98%EC%97%B4-4-%EB%B0%B1%EC%A4%8014002/)
   - 복습하기
 
 - [연속합](https://bh946.github.io/baekjoontest/(C++)%EC%97%B0%EC%86%8D%ED%95%A9-%EB%B0%B1%EC%A4%801912/)
-- [제곱수의 합](https://bh946.github.io/baekjoontest/(C++)%EC%A0%9C%EA%B3%B1%EC%88%98%EC%9D%98-%ED%95%A9-%EB%B0%B1%EC%A4%801699/)
+- [제곱수의 합](https://bh946.github.io/baekjoontest/(C++)%EC%A0%9C%EA%B3%B1%EC%88%98%EC%9D%98-%ED%95%A9-%EB%B0%B1%EC%A4%801699/) => 할차례
   - 복습하기
 
 - [합분해](https://bh946.github.io/baekjoontest/(C++)%ED%95%A9%EB%B6%84%ED%95%B4-%EB%B0%B1%EC%A4%802225/)
