--- a/_posts/Coding_Test/Baekjoon_Concept/2023-08-01-(백준_코테1)코딩 테스트 준비 - 문제.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-08-01-(백준_코테1)코딩 테스트 준비 - 문제.md
@@ -36,16 +36,16 @@ typora-root-url: ../../..
 - [16968번 - 차량 번호판 1]() -> "진하게" 아닌것들은 다시 풀것
 - **[16917번 - 양념 반 후라이드 반](https://bh946.github.io/baekjoontest/(java)%EC%96%91%EB%85%90-%EB%B0%98-%ED%9B%84%EB%9D%BC%EC%9D%B4%EB%93%9C-%EB%B0%98-%EB%B0%B1%EC%A4%8016917/)**
 - [16922번 - 로마 숫자 만들기](https://bh946.github.io/baekjoontest/(java)%EB%A1%9C%EB%A7%88-%EC%88%AB%EC%9E%90-%EB%A7%8C%EB%93%A4%EA%B8%B0-%EB%B0%B1%EC%A4%8016922/)
-- [16924번 - 십자가 찾기](https://www.acmicpc.net/problem/16924)
-- [16936번 - 나3곱2](https://www.acmicpc.net/problem/16936) => 풀 차례
+- **[16924번 - 십자가 찾기](https://bh946.github.io/baekjoontest/(java)%EC%8B%AD%EC%9E%90%EA%B0%80-%EC%B0%BE%EA%B8%B0-%EB%B0%B1%EC%A4%8016924/)**
+- **[16936번 - 나3곱2](https://bh946.github.io/baekjoontest/(java)%EB%82%983%EA%B3%B12-%EB%B0%B1%EC%A4%8016936/)** 
 - [16937번 - 두 스티커](https://www.acmicpc.net/problem/16937)
-- [16938번 - 캠프 준비](https://www.acmicpc.net/problem/16938)
-- [16943번 - 숫자 재배치](https://www.acmicpc.net/problem/16943)
-- [16637번 - 괄호 추가하기](https://www.acmicpc.net/problem/16637)
+- **[16938번 - 캠프 준비](https://bh946.github.io/baekjoontest/(java)%EC%BA%A0%ED%94%84-%EC%A4%80%EB%B9%84-%EB%B0%B1%EC%A4%8016938/)**
+- **[16943번 - 숫자 재배치](https://bh946.github.io/baekjoontest/(java)%EC%88%AB%EC%9E%90-%EC%9E%AC%EB%B0%B0%EC%B9%98-%EB%B0%B1%EC%A4%8016943/)**
+- **[16637번 - 괄호 추가하기](https://bh946.github.io/baekjoontest/(java)%EA%B4%84%ED%98%B8-%EC%B6%94%EA%B0%80%ED%95%98%EA%B8%B0-%EB%B0%B1%EC%A4%8016637/)**
 - [15683번 - 감시](https://www.acmicpc.net/problem/15683)
 - [17088번 - 등차수열 변환](https://www.acmicpc.net/problem/17088)
-- [15686번 - 치킨 배달](https://www.acmicpc.net/problem/15686)
-- [2210번 - 숫자판 점프](https://www.acmicpc.net/problem/2210)
+- [15686번 - 치킨 배달](https://www.acmicpc.net/problem/15686) 
+- [2210번 - 숫자판 점프](https://www.acmicpc.net/problem/2210)  => 풀 차례
 - [2422번 - 한윤정이 이탈리아에 가서 아이스크림을 사먹는데](https://www.acmicpc.net/problem/2422)
 - [17089번 - 세 친구](https://www.acmicpc.net/problem/17089)
 - [17406번 - 배열 돌리기 4](https://www.acmicpc.net/problem/17406)
