--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -21,6 +21,20 @@ typora-root-url: ../../..
 * **참고 링크 : 구글링 등등**
 * 코드들만 기록할랬는데,,, 정리하다보니 해석을 좀 많이했네,,
 
+<br>
+
+**시간복잡도**
+
+* 컴퓨터가 대략 1억 번의 계산이 1초 내에 가능하다고 기억(실제론 좀 더 계산)
+
+![image-20230428154114290](/images/2023-01-11-(백준_필수3)알고리즘 템플릿 - java/image-20230428154114290.png) 
+
+<br>
+
+**공간복잡도** 
+
+* **512MB = 1.2억개의 int**
+
 <br><br>
 
 # Template
