--- a/_posts/Coding_Test/Baekjoon_Concept/2023-02-01-(백준_강의1)알고리즘 기초1 - 문제 모음.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-02-01-(백준_강의1)알고리즘 기초1 - 문제 모음.md
@@ -125,7 +125,7 @@ typora-root-url: ../../..
   - 복습하기
 
 - [연속합](https://bh946.github.io/baekjoontest/(C++)%EC%97%B0%EC%86%8D%ED%95%A9-%EB%B0%B1%EC%A4%801912/)
-- [제곱수의 합](https://bh946.github.io/baekjoontest/(C++)%EC%A0%9C%EA%B3%B1%EC%88%98%EC%9D%98-%ED%95%A9-%EB%B0%B1%EC%A4%801699/) => 할차례
+- [제곱수의 합](https://bh946.github.io/baekjoontest/(C++)%EC%A0%9C%EA%B3%B1%EC%88%98%EC%9D%98-%ED%95%A9-%EB%B0%B1%EC%A4%801699/) 
   - 복습하기
 
 - [합분해](https://bh946.github.io/baekjoontest/(C++)%ED%95%A9%EB%B6%84%ED%95%B4-%EB%B0%B1%EC%A4%802225/)
@@ -136,7 +136,7 @@ typora-root-url: ../../..
 
 - [1, 2, 3 더하기 3](https://bh946.github.io/baekjoontest/(C++)1,-2,-3-%EB%8D%94%ED%95%98%EA%B8%B0-3-%EB%B0%B1%EC%A4%8015988/)
 - [RGB거리](https://bh946.github.io/baekjoontest/(C++)RGB%EA%B1%B0%EB%A6%AC-%EB%B0%B1%EC%A4%801149/)
-- [동물원](https://bh946.github.io/baekjoontest/(C++)%EB%8F%99%EB%AC%BC%EC%9B%90-%EB%B0%B1%EC%A4%801309/)
+- [동물원](https://bh946.github.io/baekjoontest/(C++)%EB%8F%99%EB%AC%BC%EC%9B%90-%EB%B0%B1%EC%A4%801309/) => 할차례
   - 복습하기
 
 - [오르막 수](https://bh946.github.io/baekjoontest/(C++)%EC%98%A4%EB%A5%B4%EB%A7%89-%EC%88%98-%EB%B0%B1%EC%A4%8011057/)
