--- a/_posts/Coding_Test/Baekjoon_Concept/2023-08-01-(백준_코테1)코딩 테스트 준비 - 문제.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-08-01-(백준_코테1)코딩 테스트 준비 - 문제.md
@@ -45,8 +45,8 @@ typora-root-url: ../../..
 - [15683번 - 감시](https://www.acmicpc.net/problem/15683)
 - [17088번 - 등차수열 변환](https://www.acmicpc.net/problem/17088)
 - [15686번 - 치킨 배달](https://www.acmicpc.net/problem/15686) 
-- [2210번 - 숫자판 점프](https://www.acmicpc.net/problem/2210)  => 풀 차례
-- [2422번 - 한윤정이 이탈리아에 가서 아이스크림을 사먹는데](https://www.acmicpc.net/problem/2422)
+- [2210번 - 숫자판 점프](https://www.acmicpc.net/problem/2210)  
+- [2422번 - 한윤정이 이탈리아에 가서 아이스크림을 사먹는데](https://www.acmicpc.net/problem/2422) => 풀 차례
 - [17089번 - 세 친구](https://www.acmicpc.net/problem/17089)
 - [17406번 - 배열 돌리기 4](https://www.acmicpc.net/problem/17406)
 - [17135번 - 캐슬 디펜스](https://www.acmicpc.net/problem/17135)
